--- a/lesson-9/css/prophets.css
+++ b/lesson-9/css/prophets.css
@@ -28,5 +28,6 @@
 
   footer{
     text-align: center;
+    font-size: 1.5rem;
   }
 
